Feat: Added amount to chore model and wip of delete
