# src/main/java/com/usmakestwo/chores/handler/ChoresGetHandler.java
@@ -76,6 +76,7 @@ public class ChoresGetHandler implements HttpHandler {
                         chore.setName(Helper.isNull(resultSet.getString("NAME")));
                         chore.setRecurrent(Helper.isNull(resultSet.getString("RECURRENT")));
                         chore.setCompleted(resultSet.getBoolean("COMPLETED"));
+                        chore.setAmount(resultSet.getInt("AMOUNT"));
 
                         // serialize the response
                         map.add(chore);
