# tmp/openapi.yaml
@@ -45,16 +45,19 @@ paths:
                   name: Wash car
                   completed: true
                   recurrent: weekly
+                  amount: 10
                 - id: 2
                   customerID: 1
                   name: Vacuum room
                   completed: false
                   recurrent: daily
+                  amount: 2.5
                 - id: 3
                   customerID: 1
                   name: Clean room
                   completed: false
                   recurrent: monthly
+                  amount: 6
         default:
           description: unexpected error
           content:
@@ -119,6 +122,7 @@ paths:
                   name: Wash Car
                   completed: true
                   recurrent: weekly
+                  amount: 30
         default:
           description: unexpected error
           content:
@@ -205,6 +209,10 @@ components:
         recurrent:
           description: How often does the chore happen
           type: string
+        amount:
+          description: How much money does the chore recieve
+          type: integer
+          format: int64
     Error:
       required:
         - code
